# tauri-vue-template

./: .editorconfig  .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  .prettierignore  .prettierrc.cjs  .prettierrc.json  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
scripts/: bump-version.js
src/: App.vue  index.css  main.ts  type.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  startup.rs  store.rs  tray.rs
src/components/button/: button.vue  z-button.vue
src/components/config/: z-config.vue
src/components/switch/: switch.vue  z-switch.vue
src/constants/: common.ts  config.ts
src/hooks/: useLogger.ts  useTheme.ts
src/pages/: index-page.vue
src/stores/: useSettingsStore.ts
src/styles/: global.css  reset.css  theme.css
src/utils/: helper.ts
